<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="207dp"
            android:layout_height="100dp"
            android:padding="3dip"
            android:gravity="center"
            android:text=""
            android:layout_span="2" />



    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="207dp"
            android:layout_height="50dp"
            android:padding="3dip"
            android:gravity="center"
            android:text="@string/ranking"
            android:textSize="30sp"
            android:layout_span="2"
            android:background="@color/grey05"
            android:layout_margin="5dip"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="165dp"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/rankingDay"
            android:textSize="20sp"
            android:background="@color/grey05"
            android:layout_margin="5dip"/>

        <TextView
            android:layout_width="165dp"
            android:layout_margin="5dip"
            android:background="@color/grey05"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/rankingScore"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/topDay"
            android:text="@string/topDay"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/topScore"
            android:text="@string/topScore"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/secondDay"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/secondDay"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/secondScore"
            android:text="@string/secondScore"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/thirdDay"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/thirdDay"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/thirdScore"
            android:text="@string/thirdScore"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/fourthDay"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/fourthDay"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/fourthScore"
            android:text="@string/fourthScore"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/fifthDay"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/fifthDay"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/fifthScore"
            android:text="@string/fifthScore"
            android:gravity="center"
            android:padding="3dip"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="207dp"
            android:layout_height="100dp"
            android:padding="3dip"
            android:gravity="center"
            android:text=""
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="207dp"
            android:layout_height="50dp"
            android:padding="3dip"
            android:gravity="center"
            android:text="@string/home"
            android:textSize="30sp"
            android:layout_span="2"
            android:background="@color/grey05"
            android:layout_margin="5dip"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:padding="3dip"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="30sp"
        android:layout_span="2"
        android:background="@color/grey05"
        android:layout_margin="5dip"/>
    </TableRow>
</TableLayout>

